--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,15 +2,22 @@
         display: flex;
         justify-content: center;
         color: gray;
-        padding: 50px 0px 70px;
+        padding: 50px 100px 70px;
+        flex-direction: column;
         // padding-bottom: 0px;
         img{
             width: 24px;
             height: 24px;
         }
-
+        hr{
+            width: 100%;
+            margin: 50px 0px;
+            height: 0;
+            border: 1px solid rgb(210, 206, 206);
+            // padding: 20px;
+        }
         .conatiner{
-            width: 1400px;
+            width: 100%;
             .top{
                 display: flex;
                 justify-content: space-between;
