--- a/src/components/navbar/NavBar.scss
+++ b/src/components/navbar/NavBar.scss
@@ -9,21 +9,29 @@
   z-index: 999;
   &.active {
     background-color: white;
-    color: black;
+    color: #011a3f;
   }
   .container {
     width: 1400px;
     // background-color: lawngreen;
     display: flex;
     justify-content: space-between;
-    padding: 20px 0px;
+    padding: 10px 0px;
 
     .logo {
-      font-size: 40px;
+      font-size: 50px;
       // font-weight: bold;
       font-family: "Playfair Display", serif;
       .text {
+        padding-top: 0px;
         font-family: "Roboto Slab", serif;
+      }
+      img{
+        width: 70px;
+        height: 60px;
+        margin-right: 5px;
+        margin-top: 5px;
+        padding-top: 10px;
       }
     }
     .links {
