--- a/src/components/featured/Featured.scss
+++ b/src/components/featured/Featured.scss
@@ -2,7 +2,7 @@
     height: 600px;
     display: flex;
     justify-content: center;
-    background-color: #01327b;
+    background-color: #011a3f;
     color: white;
 
     .container{
@@ -53,7 +53,6 @@
             display: flex;
             align-items: center;
             gap: 10px;
-            span{}
             button{
                 color: white;
                 background-color: transparent;
