--- a/src/components/navbar/NavBar.scss
+++ b/src/components/navbar/NavBar.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #01327b;
+  background-color: #011a3f;
   color: white;
   position: sticky;
   top: 0;
