--- a/src/components/navbar/NavBar.scss
+++ b/src/components/navbar/NavBar.scss
@@ -10,6 +10,8 @@
   &.active {
     background-color: white;
     color: #011a3f;
+    
+
   }
   .container {
     width: 100%;
@@ -78,7 +80,7 @@
       span {
         font-family: "Roboto Slab", serif;
       }
-      button {
+      .button {
         color: white;
         padding: 10px 20px;
         border-radius: 5px;
@@ -89,6 +91,10 @@
         &:hover {
           background-color: #5fb7d9;
           color: #0f52ba;
+        }
+        &.active{
+          color: #011a3f;
+          border: 1px solid #011a3f;
         }
       }
     }
