--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -2,10 +2,13 @@
     display: flex;
     align-items:initial;
     justify-content:flex-start;
-    margin-left: 230px;
-    padding: 30px;
+    margin-left: 12%;
+    padding-top: 2%;
+    padding-bottom: 1%;
+
     color: #555;
     h2{
+
         font-size: 30px;
         font-family: "Roboto Slab", serif;
     }
