--- a/src/components/featured/Featured.scss
+++ b/src/components/featured/Featured.scss
@@ -6,14 +6,15 @@
     color: white;
 
     .container{
-        width: 1400px;
+        width: 100%;
         display: flex;
         align-items: center;       
     .left{
+        width: 30%;
         display: flex;
         flex-direction: column;
         gap: 30px;
-
+        padding-left: 200px;
         h1{
             font-size: 30px;
             i{
@@ -66,7 +67,9 @@
     }
     .right{
         height: 100%;
+        width: 50%;
         img{
+            width: 100%;
             height: 100%;
             object-fit: contain;
         }
