--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,3 +1,5 @@
+.home{
+    width: 100%;
 .heading {
     display: flex;
     align-items:initial;
@@ -12,4 +14,5 @@
         font-size: 30px;
         font-family: "Roboto Slab", serif;
     }
+}
 }
