--- a/client/src/pages/skill/Skill.scss
+++ b/client/src/pages/skill/Skill.scss
@@ -201,10 +201,11 @@
             }
             
             button{
-                margin-top: 2%;
+                width: 200px;
+                margin-top: 16%;
                 background-color: #1dbf73;
                 // width: 30%;
-                font-size: 20px;
+                font-size: 25px;
                 border: 0.5px solid white;
                 color: white;
                 padding: 3%;
