--- a/client/src/pages/skills/Skills.scss
+++ b/client/src/pages/skills/Skills.scss
@@ -74,7 +74,8 @@
         padding-left: 1%;
         padding-right: 1%;
         display: flex;
-        justify-content: space-between;
+        gap: 3%;
+        // justify-content: space-between;
         flex-wrap: wrap;
       }
     }
