--- a/client/src/pages/add/add.scss
+++ b/client/src/pages/add/add.scss
@@ -3,6 +3,9 @@
     justify-content: center;
   
     .container {
+      .error{
+        color: red;
+      }
       width: 1400px;
       padding: 50px 0px;
   
